WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281487
[GStreamer] Fix VideoEncoderPrivateGStreamer build without WebCodecs
https://bugs.webkit.org/show_bug.cgi?id=281487
Summary
[GStreamer] Fix VideoEncoderPrivateGStreamer build without WebCodecs
Olivier Blin
Reported
2024-10-15 04:19:53 PDT
VideoEncoderPrivateGStreamer.h currently includes VideoEncoder.h for ScalabilityMode enum, but this is only available when WEB_CODECS is enabled. To be able to use VideoEncoderPrivateGStreamer for MediaRecorder and MediaStream when WebCodecs is disabled, use VideoEncoderScalabilityMode.h instead.
Attachments
Add attachment
proposed patch, testcase, etc.
Olivier Blin
Comment 1
2024-10-15 04:22:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35213
EWS
Comment 2
2024-10-15 07:54:05 PDT
Committed
285195@main
(f364dfc9eccc): <
https://commits.webkit.org/285195@main
> Reviewed commits have been landed. Closing PR #35213 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug