[GStreamer] Fix VideoEncoderPrivateGStreamer build without WebCodecs https://bugs.webkit.org/show_bug.cgi?id=281487

Reviewed by Philippe Normand.

VideoEncoderPrivateGStreamer.h included VideoEncoder.h for the ScalabilityMode
enum, but this is only available when WEB_CODECS is enabled.

To be able to use VideoEncoderPrivateGStreamer for MediaRecorder and MediaStream
when WebCodecs is disabled, use VideoEncoderScalabilityMode.h instead.

* Source/WebCore/platform/gstreamer/VideoEncoderPrivateGStreamer.cpp:
(webkit_video_encoder_class_init):
* Source/WebCore/platform/gstreamer/VideoEncoderPrivateGStreamer.h:
(WebKitVideoEncoderBitRateAllocation::create):
(WebKitVideoEncoderBitRateAllocation::scalabilityMode const):
(WebKitVideoEncoderBitRateAllocation::WebKitVideoEncoderBitRateAllocation):

Canonical link: https://commits.webkit.org/285195@main